# PrithviNet

./: .gitignore  README.md  final_dataset.json  generate_data.py
AI_models/: city_day_cleaned.csv  india_noise_pollution_dataset.csv
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: supabase.py
backend/app/datasets/: Indian_water_data_cleaned.csv
backend/app/routers/: __init__.py  ai.py  auth.py  environment_router.py
backend/app/schemas/: auth_schema.py
backend/app/services/: auth_service.py  database.py  environment_service.py
frontend/: README.md  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AiChatUi.jsx  AlertCard.jsx  AvatarUpload.jsx  Badge.jsx  Button.jsx  Card.jsx  ComplaintCard.jsx  ComplianceTrendChart.jsx  Dropdown.jsx  ErrorBoundary.jsx  EvidenceModal.jsx  FileUploadZone.jsx  LocationPermissionModal.jsx  LocationPickerModal.jsx  MapUi.jsx  Modal.jsx  Navbar.jsx  RoleGate.jsx  SensorCard.jsx  Sidebar.jsx  Table.jsx  ThemeSwitch.jsx  ThemeToggle.jsx  Timeline.jsx
frontend/src/data/: complianceModules.js  dummyDatabase.json  dummyDatabase_min.json  seedSystem.js  systemMonitoringData.js
frontend/src/hooks/: useBasePath.js
frontend/src/layouts/: AdminLayout.jsx  AuthorityLayout.jsx  CitizenLayout.jsx  IndustryLayout.jsx  InspectorLayout.jsx  OfficialLayout.jsx
frontend/src/pages/: AiAssistant.jsx  Alerts.jsx  CitizenRegister.jsx  ComplaintDetails.jsx  Compliance.jsx  Dashboard.jsx  DummyPage.jsx  EditProfile.jsx  FileComplaint.jsx  IndustryCompliance.jsx  (+11 more)
(+5 files in other folders)
